--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,42 @@
+/*
+ * The MIT License
+ *
+ * Copyright 2014-2017 TweetWallFX
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in
+ * all copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ * THE SOFTWARE.
+ */
+
 buildscript {
     repositories {
         maven {
-            url "https://plugins.gradle.org/m2/"
+            url 'https://plugins.gradle.org/m2/'
         }
         jcenter()
     }
     
     dependencies {
-        classpath ("cz.kubacki.gradle.plugins:gradle-nbm-plugin:1.17.0") {
+        classpath group: 'cz.kubacki.gradle.plugins', name: 'gradle-nbm-plugin', version: '1.17.0', {
             // Workaround for bad transitive dependencies
             exclude group:'org.slf4j', module:'slf4j-simple'
             exclude group:'org.gradle', module:'gradle-tooling-api' // was version 2.7 
-
         }
-        classpath "gradle.plugin.com.github.spotbugs:gradlePlugin:1.6.0"
+        classpath group: 'gradle.plugin.com.github.spotbugs', name: 'gradlePlugin', version: '1.6.0'
         gradleApi()
     }
 }
@@ -43,9 +66,9 @@ subprojects {
     }
 
     tasks.withType(JavaCompile) {
-        options.compilerArgs << "-Xlint:all"
-        options.compilerArgs << "-Werror"
-        options.compilerArgs << "-proc:none"
+        options.compilerArgs << '-Xlint:all'
+        options.compilerArgs << '-Werror'
+        options.compilerArgs << '-proc:none'
     }
     
     spotbugs {
@@ -65,306 +88,24 @@ subprojects {
     }
     
     tasks.withType(JavaExec) {
-        jvmArgs "-XX:+IgnoreUnrecognizedVMOptions"
-        jvmArgs "--add-modules java.xml.bind"
+        jvmArgs '-XX:+IgnoreUnrecognizedVMOptions'
+        jvmArgs '--add-modules java.xml.bind'
     }
 }
-
-project (":TweetWallFX-Configuration") {
-    dependencies {
-        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
-    }
-}
-
-project(":TweetWallFX-Tweet-API") {
-    dependencies {
-    }
-}
-
-project(":TweetWallFX-Tweet-Impl-Twitter4J") {
-    dependencies {
-        compile group: 'org.twitter4j', name: 'twitter4j-core', version: versionTwitter4j
-        compile group: 'org.twitter4j', name: 'twitter4j-stream', version: versionTwitter4j
-        compile project(':TweetWallFX-Tweet-API')
-        compile project(':TweetWallFX-Tweet-Impl-Twitter4J-OAuth')
-        compile project(':TweetWallFX-Configuration')
-    }
-}
-
-project(":TweetWallFX-Core"){
-    dependencies {
-        compile group: "de.jensd", name: "fontawesomefx", version: "8.9"
-        compile group: "com.vdurmont", name: "emoji-java", version: "3.1.3"
-        compile project(':TweetWallFX-Tweet-API')
-        compile project(':TweetWallFX-Configuration')
-    }
-}
-
-project(":TweetWallFX-2D"){
-    dependencies {
-        compile project(':TweetWallFX-Core')
-        compile project(':TweetWallFX-Controls')
-    }
-}
-
-project(":TweetWallFX-3D"){
-    dependencies {
-        compile fileTree(dir: 'libs', include: '*.jar')
-        compile project(':TweetWallFX-Core')
-    }
-}
-
-project(":TweetWallFX-Controls"){
-    dependencies {
-        compile group: "javax.cache", name: "cache-api", version: "1.0.0"
-        compile group: "org.ehcache", name: "ehcache", version: "3.3.0"
-        runtime group: "org.apache.logging.log4j", name: "log4j-slf4j-impl", version: versionLog4j
-        
-        compile group: "javax.json.bind", name:"javax.json.bind-api", version:"1.0"
-        runtime group: "org.eclipse", name: "yasson", version: "1.0"
-        runtime group: "org.glassfish", name: "javax.json", version: "1.1"
-        
-        compile project(':TweetWallFX-Core')
-    }
-}
-
-project(":TweetWallFX-Devoxx"){
-    apply plugin: "application"
-    mainClassName = "org.tweetwallfx.generic.Main"
-
-    tasks.withType(JavaExec) {
-        main mainClassName
-    }
-
-    task('debug', dependsOn: 'classes', type: JavaExec) {
-        classpath sourceSets.main.runtimeClasspath
-        debug = true
-    }
-
-    dependencies {
-        compile project(':TweetWallFX-Generic2D')
-        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    }
-}
-
-project(":TweetWallFX-Devoxx-2015"){
-    apply plugin: "application"
-    mainClassName = "org.tweetwallfx.generic.Main"
-
-    tasks.withType(JavaExec) {
-        main mainClassName
-    }
-
-    task('debug', dependsOn: 'classes', type: JavaExec) {
-        classpath sourceSets.main.runtimeClasspath
-        debug = true
-    }
-
-    dependencies {
-        compile project(':TweetWallFX-Generic2D')
-        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    }
-}
-
-project(":TweetWallFX-Devoxx-2016"){
-    apply plugin: "application"
-    mainClassName = "org.tweetwallfx.generic.Main"
-
-    tasks.withType(JavaExec) {
-        main mainClassName
-    }
-
-    task('debug', dependsOn: 'classes', type: JavaExec) {
-        classpath sourceSets.main.runtimeClasspath
-        debug = true
-    }
-
-    dependencies {
-        compile project(':TweetWallFX-Generic2D')
-        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    }
-}
-
-project(":TweetWallFX-Devoxx-2017-US") {
-    apply plugin: "application"
-    mainClassName = "org.tweetwallfx.generic.Main"
-
-    tasks.withType(JavaExec) {
-        main mainClassName
-    }
-
-    task('debug', dependsOn: 'classes', type: JavaExec) {
-        classpath sourceSets.main.runtimeClasspath
-        debug = true
-    }
-
-    dependencies {
-        compile project(':TweetWallFX-Generic2D')
-        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    }
-}
-
-project(":TweetWallFX-Devoxx-2017-FR") {
-    apply plugin: "application"
-    mainClassName = "org.tweetwallfx.generic.Main"
-
-    tasks.withType(JavaExec) {
-        main mainClassName
-    }
-
-    task('debug', dependsOn: 'classes', type: JavaExec) {
-        classpath sourceSets.main.runtimeClasspath
-        debug = true
-    }
-
-    dependencies {
-        compile project(':TweetWallFX-Generic2D')
-        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    }
-}
-
-project(":TweetWallFX-Devoxx-2017-BE:CFP-Implementation-2017-BE") {
-    dependencies {
-        compile project(':TweetWallFX-Devoxx-API-CFP')
-        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: versionLog4j
-        
-        runtime group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
-    }
-}
-
-project(":TweetWallFX-Devoxx-2017-BE:Exhibition") {
-    apply plugin: "application"
-    mainClassName = "org.tweetwallfx.generic.Main"
-
-    tasks.withType(JavaExec) {
-        main mainClassName
-    }
-
-    task('debug', dependsOn: 'classes', type: JavaExec) {
-        classpath sourceSets.main.runtimeClasspath
-        debug = true
-    }
-
-    dependencies {
-        compile project(':TweetWallFX-Generic2D')
-        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    }
-}
-
-project(":TweetWallFX-NetBeans") {
-    apply plugin: "application"
-    mainClassName = "org.tweetwallfx.generic.Main"
-
-    tasks.withType(JavaExec) {
-        main mainClassName
-    }
-
-    task('debug', dependsOn: 'classes', type: JavaExec) {
-        classpath sourceSets.main.runtimeClasspath
-        debug = true
-    }
-
-    dependencies {
-        compile project(':TweetWallFX-Generic2D')
-        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    }
-}
-
-project(":TweetWallFX-JavaOne") {
-    apply plugin: "application"
-    mainClassName = "org.tweetwallfx.generic.Main"
-
-    tasks.withType(JavaExec) {
-        main mainClassName
-    }
-
-    task('debug', dependsOn: 'classes', type: JavaExec) {
-        classpath sourceSets.main.runtimeClasspath
-        debug = true
-    }
-
-    dependencies {
-        compile project(':TweetWallFX-Generic2D')
-        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    }
-}
-
-project(":TweetWallFX-Generic2D") {
-    dependencies {
-        compile project(':TweetWallFX-2D')
-        compile project(':TweetWallFX-Controls')
-    }
-}
-
-project(':TweetWallFX-Devoxx-API-CFP') {
-    dependencies {
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.+'
-        compile group: 'javax', name: 'javaee-api', version: '8.0'
-        
-        runtime group: 'org.glassfish.jersey.core', name: 'jersey-client', version: versionJersey
-        runtime group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: versionJersey
-    }
-}
-
-// disabled for future reference
-//project(":TweetWallFX-EmbeddableTest") {
-//    apply plugin: 'application'
-//    mainClassName = "Main"
-//
-//    tasks.withType(JavaExec) {
-//        main mainClassName
-//    }
-//
-//    task('debug', dependsOn: 'classes', type: JavaExec) {
-//        classpath sourceSets.main.runtimeClasspath
-//        debug = true
-//    }
-//
-//    dependencies {
-//        compile project(':TweetWallFX-Embeddable')
-//        runtime project(':TweetWallFX-Tweet-Impl-Twitter4J')
-//    }
-//}
-//
-//project(":TweetWallFX-Embeddable") {
-//    apply plugin: "java"
-//    apply plugin: 'cz.kubacki.nbm'
-//    
-//    dependencies {
-//        compile project(':TweetWallFX-2D')
-//        compile project(':TweetWallFX-Controls')
-//        runtime project(':TweetWallFX-Tweet-Impl-Twitter4J')
-//    }
-//    
-//    task copyToLib(type: Copy) {
-//        into "$buildDir/lib"
-//        from configurations.runtime
-//    }    
-//    
-//    nbm {
-////        moduleName = "org.tweetwallfx.embeddable"
-//
-//        friendPackages {
-//            add "org.tweetwallfx.embeddable"
-//        }
-//    }
-//
-//    tasks.assemble.dependsOn tasks.copyToLib
-//}
 
 description = 'TweetWallFX'
 
 task createFolders(description: 'Creates the folders for the projects and sourceSets should they not exist.') doLast {
     rootProject.allprojects.each {p ->
         if (!p.getProjectDir().isDirectory()) {
-            println "Creating project folder: ${p.getProjectDir()}"
+            println 'Creating project folder: ' + p.getProjectDir()
             p.getProjectDir().mkdirs()
         }
         
         if (p.hasProperty('sourceSets')) {
             p.sourceSets*.allSource*.srcDirs*.each { File srcDir ->
                 if (!srcDir.isDirectory()) {
-                    println "Creating source folder: ${srcDir}"
+                    println 'Creating source folder: ' + srcDir
                     srcDir.mkdirs()
                 }
             }
