--- a/devoxx-2017-be/exhibition/build.gradle
+++ b/devoxx-2017-be/exhibition/build.gradle
@@ -37,4 +37,6 @@ task('debug', dependsOn: 'classes', type: JavaExec) {
 dependencies {
     compile project(':TweetWallFX-Generic2D')
     compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
+    compile project(':TweetWallFX-Devoxx-API-CFP')
+    runtime project(":devoxx-2017-be:CFP-Implementation-2017-BE")        
 }
