--- a/settings.gradle
+++ b/settings.gradle
@@ -44,6 +44,7 @@ includeWithName ':stepengine-steps', 'tweetwallfx-stepengine-steps'
 includeWithName ':transitions', 'tweetwallfx-transitions'
 includeWithName ':tweet-api', 'tweetwallfx-tweet-api'
 includeWithName ':tweet-impl-twitter4j', 'tweetwallfx-tweet-impl-twitter4j'
+includeWithName ':tweet-impl-mastodon4j', 'tweetwallfx-tweet-impl-mastodon4j'
 includeWithName ':util', 'tweetwallfx-utility'
 
 includeWithName ':controls', 'tweetwallfx-controls'
@@ -65,3 +66,8 @@ includeWithName ':generic2d', 'tweetwallfx-generic2d'
 
 // disabled subproject for future reference
 //includeWithName ':3d', 'tweetwallfx-3d'
+
+def mastodon4jProject = new File(rootDir, '../Mastodon4J')
+if (mastodon4jProject.isDirectory()) {
+    includeBuild mastodon4jProject
+}
