--- a/tweet-impl-mastodon4j/build.gradle
+++ b/tweet-impl-mastodon4j/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2015-2023 TweetWallFX
+ * Copyright (c) 2015-2022 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -21,39 +21,10 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-package org.tweetwallfx.tweet.api;
 
-import java.util.stream.Stream;
+dependencies {
+    api project(':tweetwallfx-tweet-api')
 
-public interface Tweeter {
-
-    public static Tweeter getInstance() {
-        return TweeterHolder.instance();
-    }
-
-    boolean isEnabled();
-
-    TweetStream createTweetStream(TweetFilterQuery filterQuery);
-
-    Tweet getTweet(final long tweetId);
-
-    User getUser(final String userId);
-
-    Stream<User> getFriends(final User user);
-
-    Stream<User> getFriends(final String userScreenName);
-
-    Stream<User> getFriends(final long userId);
-
-    Stream<User> getFollowers(final User user);
-
-    Stream<User> getFollowers(final String userScreenName);
-
-    Stream<User> getFollowers(final long userId);
-
-    Stream<Tweet> search(final TweetQuery tweetQuery);
-
-    Stream<Tweet> searchPaged(final TweetQuery tweetQuery, int numberOfPages);
-
-    void shutdown();
+//    implementation 'org.mastodon4j:mastodon4j-core:1.0.0-SNAPSHOT'
+    implementation 'org.slf4j:slf4j-api:2.0.4'
 }
